--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.0",
-    "astro-netlify-cms": "^0.3.3"
+    "astro": "^1.6.0"
   }
 }
